--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.24.0",
     "redux": "^4.2.1",
     "sass": "^1.69.5"
   },
