--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.24.0",
+    "recharts": "^2.10.3",
     "redux": "^4.2.1",
     "sass": "^1.69.5"
   },
