--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "sass": "^1.69.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=80 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
